# Advent2025

./: dune-project  index.html  justfile
lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  day9Image.ml  dune  input.ml  input.mli  mono.ml  mono.mli
test/: dune
