(library
 (inline_tests)
 (name Advent)
 ; (libraries stdio base eio eio_main piaf input angstrom vg )
 (libraries stdio base input angstrom vg brr)
  (modules day1 day2 day3 day4 day5 mono day6 day7 day8 day9 day9Image)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_jane)))



(library
 (name input)
 (libraries stdio base eio eio_main piaf)
 (modules input)
)
